# TaskFlow-Project

./: Jenkinsfile
Backend/: .gitignore  alembic.ini  main.py  public_key.pem  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 03c1dbd32873_comment_table_created.py  03f30bd02b87_bucket_table_created.py  092a192a6e97_role_table_created.py  09363301ee40_fixed_some_naming_in_project.py  0c070e1cccbf_permission_seeding_and_role_seeding.py  141a34fb1bc1_all_updates1.py  15c69a7340fd_fixed_some_naming_in_permission_model.py  1915022cbbf9_member_seeding.py  1eae35f0a681_role_seeding.py  29982095bd1a_member_table_created.py  2c253ff96b91_all_table_created_with_many_relationship.py  38d2542eb860_company_table_created.py  45a7e83e08ac_project_invite_and_task_attchement_.py  464227cad1a8_task_table_created.py  70f305879d56_company_domain_name.py  7bb687d99dfd_role_member_mapping_added.py  81bfbb59bea2_project_model_for_soft_delete.py  b0f496556d50_project_table_created.py  b62a75f0a585_member_table_created.py  b6d6c1f729b2_project_invite_and_task_attchement_.py  bd88f22658c6_all_update.py  c101c66ddf96_project_invite_and_task_attchement_added.py  c467df2e4a9f_comment_table_created.py  c4a2aa75b344_project_table_created.py  c83c994edd32_all_updates.py  c8b2eec07cd7_permission_table_created.py  d488d002ddfc_all_table_created.py  de62ab096baa_fixed_some_naming.py  e0b684724a47_seeding.py  e51aff7cc0b0_all_table_created_with_many_.py  f2dcf47c75ad_member_role_seeding.py
Backend/app/db/: base.py
Backend/app/model/: __init__.py  bucket_model.py  comment_model.py  (+9 more)
(+74 files in other folders)
