[project]
name = "task-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "boto3>=1.34",
    "botocore>=1.43.26",
    "certifi>=2026.5.20",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
